<resources>
    <string name="app_name">ACBr</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="screen_register">CADASTRO</string>


    <string name="on_boarding_button_next">PRÓXIMO</string>
    <string name="on_boarding_button_back">VOLTAR</string>
    <string name="on_boarding_button_skip_presentation">Pular apresentação</string>
    <string name="on_boarding_text_find_favorite">Faça seu pedido em mais de um restaurante por vez</string>
    <string name="on_boarding_text_hungry">Esqueça as filas! Peça pelo app e retire no balcão</string>
    <string name="on_boarding_text_receive_food_house">Pode descansar, nós levamos sua comida na mesa :)</string>
    <string name="login_or_create">O que você deseja fazer?</string>
    <string name="login_or_create_find_all">Você está prestes a encontrar vários restaurantes perto de você :)</string>
    <string name="login">Login</string>
    <string name="create_new_account">Cadastrar</string>

    <string name="no_internet">Verifique sua conexão com a internet...</string>
    <string name="start_text_info">O que você deseja fazer?</string>
    <string name="which_way_to_register">Como deseja continuar seu cadastro?</string>
    <string name="reenvio_ou_outra_forma_de_acesso">Reenviar código ou tentar outra forma de acesso</string>
    <string name="reenviar_codigo">Para reenviar o código, aguarde </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="screen_login">LOGIN</string>
    <string name="title_activity_home">SHOPPINGS</string>
    <string name="title_shoppings">Início</string>
    <string name="title_orders">Pedidos</string>
    <string name="title_profile">Perfil</string>
    <string name="close">fechar</string>
    <string name="good_afternoon">Boa tarde,</string>
    <string name="menu_my_profile">Meu perfil</string>
    <string name="menu_help">Ajuda</string>
    <string name="menu_about">Sobre</string>
    <string name="menu_logout">Sair</string>
    <string name="discount_after_refer">R$ 12 de desconto em seu próximo pedido</string>
    <string name="refer_and_win">Indique e ganhe</string>
    <string name="menu_wallet">Carteira</string>
    <string name="menu_discount_coupons">Cupons de desconto</string>
    <string name="menu_saved_places">Locais salvos</string>
    <string name="good_night">Boa noite</string>
    <string name="good_morning">Bom dia</string>
    <string name="label_token_expired">Seu login expirou. Por favor, faça novamente o login.</string>
    <string name="label_save_fail">Falha na atualização</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancelar</string>
    <string name="label_fail">Falha</string>
    <string name="label_warning">Atenção</string>
    <string name="label_success">Sucesso</string>
    <string name="to_send_code_wait">"Para reenviar o código, aguarde: %s"</string>
    <string name="validate_your_email">Valide seu e-mail</string>
    <string name="validate_your_phone">Valide seu celular</string>
    <string name="title_help">Ajuda</string>
    <string name="title_my_profile">Meu perfil</string>
    <string name="require_location">É necessário o compartilhamento da sua localização</string>
    <string name="label_no_item">Nenhum item encontrado</string>
    <string name="search_hint_malls">Pesquise shoppings</string>
    <string name="title_merchants">Lojas</string>
    <string name="you_are_here">Você está aqui</string>
    <string name="closer_to_you">Mais perto de você</string>
    <string name="permissionFailed">É preciso a permissão %s para o funionamento correto do aplicativo.</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="search_hint_merchants">Restaurantes</string>
    <string name="title_merchant_menu">Cardápio</string>
    <string name="merchant_is_open">Aberto agora</string>
    <string name="merchant_is_closed">Fechado agora</string>
    <string name="merchant_item_price">R$</string>
    <string name="merchant_query_hint">Pesquise um prato</string>
    <string name="load_more_items_button">Carregar mais</string>
    <string name="loading">Carregando...</string>
    <string name="phrase_to_verify_the_code_for_email">Digite Box Delivery na caixa de busca do seu email e confira na caixa de spam.</string>
    <string name="title_product">Produto</string>
    <string name="title_cart">Sacola</string>
    <string name="label_add">Adicionar</string>
    <string name="silverware_title_section">Deseja talheres?</string>
    <string name="silverware_yes">Sim, preciso de talheres \n +R$00,00</string>
    <string name="silverware_no">Não preciso de talheres</string>
    <string name="mall_self_service">Auto atendimento no shopping:</string>
    <string name="how_want_receive">Como você quer receber o seu pedido?</string>
    <string name="btn_remove">Remover</string>
    <string name="btn_edit">Editar</string>
    <string name="label_add_items">Adiconar mais itens</string>
    <string name="label_add_coupon">Adicionar um cupom de desconto</string>
    <string name="title_values_resume">Resumo de valores</string>
    <string name="title_subtotal">Subtotal</string>
    <string name="title_delivery_tax">Taxa de entrega</string>
    <string name="title_coupon">Cupom</string>
    <string name="title_total">Total</string>
    <string name="btn_continue">Continuar</string>
    <string name="label_receive_at_address">Quero receber no meu endereço</string>
    <string name="label_standard_delivery">Entrega padrão: %s</string>
    <string name="label_want_withdraw">Quero retirar</string>
    <string name="label_you_remove_order">Você busca o seu pedido no estabelecimento</string>
    <string name="label_retry">Tentar novamente</string>
    <string name="label_see_cart">Ver sacola</string>
    <string name="label_yes">Sim</string>
    <string name="label_not">Não</string>
    <string name="confirm_exclusion">Deseja realmente remover o item %s?</string>
    <string name="label_update">Atualizar</string>
    <string name="label_observation">Observações</string>
    <string name="label_hint_observation">Exemplo: Quero sem cebola</string>
    <string name="title_removal">Retirada</string>
    <string name="title_location_identification">Identificar mesa</string>
    <string name="title_resume">Resumo</string>
    <string name="title_payment_form">Pagamento</string>
    <string name="title_order">Pedido</string>
    <string name="how_want_receive_order">Como você quer receber seu pedido?</string>
    <string name="label_withdraw">Retirar no balcão</string>
    <string name="label_receive">Receber na mesa</string>
    <string name="label_free">Grátis</string>
    <string name="label_add_order">Fazer pedido</string>
    <string name="label_subtitle_resume">Resumo do pedido</string>
    <string name="label_title_resume">Revise o seu pedido</string>
    <string name="label_cred_card">Cartão de crédito</string>
    <string name="label_pix">PIX</string>
    <string name="label_details">Detalhes</string>
    <string name="no_orders">Você não tem pedidos em andamento</string>
    <string name="title_payment">Pagamento</string>
    <string name="fill_card_details">Preencha os dados do seu cartão</string>
    <string name="label_card_number">Número do cartão</string>
    <string name="label_validate">Validade</string>
    <string name="label_cvv">CVV</string>
    <string name="label_card_name">Nome do titular</string>
    <string name="label_doc_card">CPF/CNPJ do titular</string>
    <string name="label_payment">Continuar</string>
    <string name="title_payment_pix">Pagamento</string>
    <string name="title_self_attendance">Auto atendimento</string>
    <string name="title_configuration">Configuração</string>
    <string name="btn_save">Salvar</string>
    <string name="btn_update">Atualizar</string>
</resources>